[project]
name = "webhook-router"
version = "0.1.0"
description = "A lightweight CLI tool for routing webhooks to multiple destinations with filtering, transformation, and retry logic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7,<9",
    "pydantic>=2.10,<3",
    "pyyaml>=6.0.2,<7",
    "aiohttp>=3.11,<4",
    "jinja2>=3.1.4,<4",
    "cryptography>=44.0.0,<45",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "aiohttp>=3.11,<4",
]

[project.scripts]
webhook-router = "webhook_router.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120
