[project]
name = "webhook-router"
version = "0.1.0"
description = "A lightweight CLI tool for routing webhooks to multiple destinations with filtering, transformation, and retry logic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2,<9",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3,<7",
    "aiohttp>=3.14.1,<4",
    "jinja2>=3.1.6,<4",
    "cryptography>=49.0.0",
    "python-dateutil>=2.9.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "aiohttp>=3.11,<4",
]

[project.scripts]
webhook-router = "webhook_router.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
